Fixed overflow

--- a/resources/sass/ManageSurvey.scss
+++ b/resources/sass/ManageSurvey.scss
@@ -18,7 +18,6 @@ body {
     background: $admin-background-color;
     display: flex;
     justify-content: center;
-    overflow: hidden;
 }
 h2 {
     padding: 20px;
